Closed Bug 204807 Opened 23 years ago Closed 23 years ago

[junk] spam analyzing should not be automatically applied to public imap folders, other user's imap folders, Unsent, Sent, Drafts or Templates folders

Categories

(MailNews Core :: Backend, defect)

x86
All
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.4final

People

(Reporter: esther, Assigned: sspitzer)

Details

Attachments

(1 file, 1 obsolete file)

Using trunk build 20030506 on winxp, macosx and linux if I open a Sent folder for a server that lists the Sent messages as new, the Junk Mail Control will analyze that folder and if I have the move option on, it will move the messages listed as junk to the designated junk folder. This would be most noticible in a new profile where everything is being marked as Junk initially. 1. Launch app 2. Create a New profile 3. Add an IMAP mail account where copies of Sent messages are listed as New messages or (to emulate this type of server, from another system open that same IMAP account, select all messages in Sent folder and mark them as New the exit) 4. In the New profile, with JMC on, select the Sent foler result: All the messages are marked as Junk, if you have the move option on those messages will move to the junk folder. expected: Not to analyze messages I send out and certainly not to move them out of the Sent folder. The above scenario is not likely, but shows the badness if someone would happen to get into that situation of having the copies in the Sent folder listed as New.
nominating we don't want messages winding up in unintended folders and possilbly lost if the purge option is used too.
Keywords: nsbeta1
This is a new case for verified bug 197149.
bienvenu points out that we don't want to analyze sent, drafts, templates. I'll whip that up. thanks for the bug, esther.
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.4final
Summary: [junk] spam analyzing should not be applied to Sent folder → [junk] spam analyzing should not be applied to Sent, Drafts or Templates folders
oh nelly, unsent too.
Summary: [junk] spam analyzing should not be applied to Sent, Drafts or Templates folders → [junk] spam analyzing should not be applied to Unsent, Sent, Drafts or Templates folders
david also points out that we have to skip these, as well: MSG_FOLDER_FLAG_IMAP_PUBLIC /* folder is an IMAP public folder */ and MSG_FOLDER_FLAG_IMAP_OTHER_USER /* folder is another user's IMAP folder */ /* Think of it like a folder that someone would share. */
Summary: [junk] spam analyzing should not be applied to Unsent, Sent, Drafts or Templates folders → [junk] spam analyzing should not be applied to public imap folders, other user's imap folders, Unsent, Sent, Drafts or Templates folders
Attached patch patch (obsolete) — Splinter Review
Summary: [junk] spam analyzing should not be applied to public imap folders, other user's imap folders, Unsent, Sent, Drafts or Templates folders → [junk] spam analyzing should not be automatically applied to public imap folders, other user's imap folders, Unsent, Sent, Drafts or Templates folders
Comment on attachment 122861 [details] [diff] [review] better bit foo, per bienvenu sr=bienvenu
Attachment #122861 - Flags: superreview+
fixed.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Using trunk build 20030523 on winxp, linux and macosx this is fixed. Verified
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: