fix for bug #204807 spam analyzing should not be automatically applied to public imap folders, other user's imap folders, Unsent, Sent, Drafts or Templates folders r/sr=bienvenu a=sspitzer